Change ImmutableMap.of moments to Map.of